--- a/style.css
+++ b/style.css
@@ -13,15 +13,21 @@
         background: linear-gradient( purple, white);
     }
     
-    .h1 {
-        display: block;
-        font-size: 2em;
-        margin-top: 0.67em;
-        margin-bottom: 0.67em;
-        margin-left: 0;
-        margin-right: 0;
-        font-weight: bold;
-    }
+    .section {
+            display: absolute;
+            color: red;
+            background: linear-gradient(rgb(56, 56, 151), purple);
+        }
+        
+        .h1 {
+            display: absolute;
+            font-size: 2em;
+            margin-top: 0.67em;
+            margin-bottom: 0.67em;
+            margin-left: 0;
+            margin-right: 0;
+            font-weight: bold;
+        }
     
     .box {
         position: relative;
